# orchestrator-langgraph

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  railway.toml  start.sh
app/: __init__.py  config.py  main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  (+5 more)
app/backends/: __init__.py  redis_store_backend.py  simple_scoped_store_backend.py
app/config/: __init__.py  integration_types.py  settings.py
app/db/: __init__.py  models.py  session.py
app/graphs/: __init__.py  langgraph_entry.py  orchestrator.py  orchestrator_deep_agent.py  orchestrator_deep_agent_ui.py  orchestrator_v2.py  orchestrator_v3.py  routing.py  state.py
app/middleware/: __init__.py  deep_agent_ui.py  llm_rate_limiter.py
app/models/: __init__.py  chat.py  integration.py
app/persistence/: __init__.py  memory_store.py  redis.py
app/services/: integration_service.py
app/streaming/: __init__.py  deep_agent_event_mapper.py  event_mapper.py  sse_events.py
app/tools/: __init__.py  clarification_tools.py  cognee_tools.py  error_handling.py  firecrawl_tools.py  graph_tools.py  integration_mcp_tools.py  mentor_hub_tools.py  outline_mcp_client.py  outline_mcp_tools.py  sanitize.py  subgraph_wrapper.py  tool_registry.py  user_memory.py
app/utils/: http_client.py  thread_title.py
docs/: ARCHITECTURE_V2.md  LLM_RATE_LIMITING.md
docs/langgraph/: production-application-structure.md  test.md
scripts/: dev-setup.sh  ensure-env.sh  test_sanitization.py  test_wrike_mcp.py  test_wrike_raw.py  test_wrike_schema.py
(+7 files in other folders)
