[project]
name = "orchestrator-langgraph"
version = "0.1.0"
description = "LangGraph-based orchestrator for CognoXent mentorship platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LangGraph v1 + LangChain v1
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.2.0",
    "langgraph-checkpoint-redis>=0.1.0",

    # LangChain v1 (create_agent replaces create_react_agent)
    "langchain>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Persistence
    "redis>=5.0.0",

    # Cognee Memory Integration
    "cognee-integration-langgraph>=0.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
